# MyFirstGame

./: .clang-format  .gitignore  CMakeLists.txt  NOTES.md  README.md  README.todo  build.sh  game.exp  game_1736044348.exp  tileson.hpp
assets/shaders/: quad.frag  quad.vert
assets/textures/: TileSet.aseprite  atlas.aseprite
assets/worlds/: TileSet.tsj  WorldMap.tiled-session  WorldMap.tmj
src/: assets.hpp  game.cpp  game.hpp  gl_renderer.cpp  gl_renderer.hpp  input.hpp  main.cpp  render_interface.hpp
src/engine/: engine.cpp  open_gl_renderer.cpp  open_gl_wrapper.hpp
src/game/: camera.hpp  config.hpp  game.cpp  game.hpp  player.hpp  render_interface.hpp  sprite.hpp  world.hpp
src/game/models/: config.hpp  player.hpp  sprite.hpp  world.hpp
src/libs/: array.hpp  bump_allocator.hpp  colors.hpp  file_io.hpp  fps_counter.hpp  generic_types.hpp  geometry.hpp  libs.hpp  logger.hpp  math.hpp
src/platform/: platform.hpp  platform_linux.cpp  platform_mac.cpp  platform_windows.cpp
src/shaders/: shared_header.hpp
src/shared/: camera.hpp  plog.hpp
src/shared/libs/: array.hpp  bump_allocator.hpp  colors.hpp  constants.hpp  file_io.hpp  generic_types.hpp  geometry.hpp  libs.hpp  logger.hpp
src/shared/models/: Material.hpp  input.hpp  render_data.hpp  transform.hpp
src/shared/platform/: platform_linux.cpp  platform_mac.cpp  platform_windows.cpp
